src/c_api.h

typedef void * rwkvmobile_runtime_t;
struct sampler_params {
    float temperature;
    int top_k;
    float top_p;
};
struct penalty_params {
    float presence_penalty;
    float frequency_penalty;
    float penalty_decay;
};
struct evaluation_results {
    int * corrects;
    float * logits_vals;
    int count;
    char ** output_texts;
};
int rwkvmobile_runtime_eval_chat_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char ** inputs,
    const int num_inputs, const int max_tokens, void (*callback)(const char *, const int, const char *),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_gen_completion_async(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
int rwkvmobile_runtime_gen_completion_batch_async(rwkvmobile_runtime_t runtime, int model_id, const char ** prompts, const int batch_size, const int max_tokens, const int stop_code, void (*callback_batch)(const int, const char **, const int*, const char **), int disable_cache);
int rwkvmobile_runtime_eval_chat_batch_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char *** inputs, const int * num_inputs,
    const int batch_size, const int max_tokens, void (*callback_batch)(const int, const char **, const int*, const char **),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_gen_completion(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
struct sampler_params rwkvmobile_runtime_get_sampler_params(rwkvmobile_runtime_t runtime, int model_id);
struct sampler_params rwkvmobile_runtime_get_sampler_params_on_batch_slot(rwkvmobile_runtime_t runtime, int model_id, int slot);
void rwkvmobile_runtime_set_sampler_params(rwkvmobile_runtime_t runtime, int model_id, struct sampler_params params);
void rwkvmobile_runtime_set_sampler_params_on_batch_slot(rwkvmobile_runtime_t runtime, int model_id, int slot, struct sampler_params params);
int rwkvmobile_runtime_set_seed(rwkvmobile_runtime_t runtime, int model_id, int seed);
int rwkvmobile_runtime_get_seed(rwkvmobile_runtime_t runtime, int model_id);
struct penalty_params rwkvmobile_runtime_get_penalty_params(rwkvmobile_runtime_t runtime, int model_id);
struct penalty_params rwkvmobile_runtime_get_penalty_params_on_batch_slot(rwkvmobile_runtime_t runtime, int model_id, int slot);
void rwkvmobile_runtime_set_penalty_params(rwkvmobile_runtime_t runtime, int model_id, struct penalty_params params);
void rwkvmobile_runtime_set_penalty_params_on_batch_slot(rwkvmobile_runtime_t runtime, int model_id, int slot, struct penalty_params params);
void rwkvmobile_runtime_add_adsp_library_path(const char * path);
void rwkvmobile_runtime_set_qnn_library_path(rwkvmobile_runtime_t runtime, const char * path);
double rwkvmobile_runtime_get_avg_decode_speed(rwkvmobile_runtime_t runtime, int model_id);
double rwkvmobile_runtime_get_avg_prefill_speed(rwkvmobile_runtime_t runtime, int model_id);
struct evaluation_results rwkvmobile_runtime_run_evaluation(rwkvmobile_runtime_t runtime, int model_id, const char * source_text, const char * target_text);
void rwkvmobile_runtime_free_evaluation_results(struct evaluation_results results);
// Vision
int rwkvmobile_runtime_load_vision_encoder(rwkvmobile_runtime_t runtime, int model_id, const char * encoder_path);
int rwkvmobile_runtime_load_vision_encoder_and_adapter(rwkvmobile_runtime_t runtime, int model_id, const char * encoder_path, const char * adapter_path);
int rwkvmobile_runtime_release_vision_encoder(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_runtime_set_image_unique_identifier(rwkvmobile_runtime_t runtime, const char * unique_identifier);
// Whisper
int rwkvmobile_runtime_load_whisper_encoder(rwkvmobile_runtime_t runtime, int model_id, const char * encoder_path);