examples/flutter/ffigen/rwkv_mobile.dart


late final _rwkvmobile_runtime_get_sampler_paramsPtr = _lookup<
    ffi.NativeFunction<sampler_params Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_sampler_params');
late final _rwkvmobile_runtime_get_sampler_params = _rwkvmobile_runtime_get_sampler_paramsPtr.asFunction<sampler_params Function(rwkvmobile_runtime_t , int )>();

sampler_params rwkvmobile_runtime_get_sampler_params_on_batch_slot(rwkvmobile_runtime_t runtime,
int model_id,
int slot,
) {
  return _rwkvmobile_runtime_get_sampler_params_on_batch_slot(runtime,
model_id,
slot,
);
}

late final _rwkvmobile_runtime_get_sampler_params_on_batch_slotPtr = _lookup<
    ffi.NativeFunction<sampler_params Function(rwkvmobile_runtime_t , ffi.Int , ffi.Int )>>('rwkvmobile_runtime_get_sampler_params_on_batch_slot');
late final _rwkvmobile_runtime_get_sampler_params_on_batch_slot = _rwkvmobile_runtime_get_sampler_params_on_batch_slotPtr.asFunction<sampler_params Function(rwkvmobile_runtime_t , int , int )>();

void rwkvmobile_runtime_set_sampler_params(rwkvmobile_runtime_t runtime,
int model_id,
sampler_params params,
) {
  return _rwkvmobile_runtime_set_sampler_params(runtime,
model_id,
params,
);
}

late final _rwkvmobile_runtime_set_sampler_paramsPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(rwkvmobile_runtime_t , ffi.Int , sampler_params )>>('rwkvmobile_runtime_set_sampler_params');
late final _rwkvmobile_runtime_set_sampler_params = _rwkvmobile_runtime_set_sampler_paramsPtr.asFunction<void Function(rwkvmobile_runtime_t , int , sampler_params )>();

void rwkvmobile_runtime_set_sampler_params_on_batch_slot(rwkvmobile_runtime_t runtime,
int model_id,
int slot,
sampler_params params,
) {
  return _rwkvmobile_runtime_set_sampler_params_on_batch_slot(runtime,
model_id,
slot,
params,
);
}

late final _rwkvmobile_runtime_set_sampler_params_on_batch_slotPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(rwkvmobile_runtime_t , ffi.Int , ffi.Int , sampler_params )>>('rwkvmobile_runtime_set_sampler_params_on_batch_slot');
late final _rwkvmobile_runtime_set_sampler_params_on_batch_slot = _rwkvmobile_runtime_set_sampler_params_on_batch_slotPtr.asFunction<void Function(rwkvmobile_runtime_t , int , int , sampler_params )>();

int rwkvmobile_runtime_set_seed(rwkvmobile_runtime_t runtime,
int model_id,
int seed,
) {
  return _rwkvmobile_runtime_set_seed(runtime,
model_id,
seed,
);
}

late final _rwkvmobile_runtime_set_seedPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Int )>>('rwkvmobile_runtime_set_seed');
late final _rwkvmobile_runtime_set_seed = _rwkvmobile_runtime_set_seedPtr.asFunction<int Function(rwkvmobile_runtime_t , int , int )>();

int rwkvmobile_runtime_get_seed(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_seed(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_seedPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_seed');
late final _rwkvmobile_runtime_get_seed = _rwkvmobile_runtime_get_seedPtr.asFunction<int Function(rwkvmobile_runtime_t , int )>();

penalty_params rwkvmobile_runtime_get_penalty_params(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_penalty_params(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_penalty_paramsPtr = _lookup<
    ffi.NativeFunction<penalty_params Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_penalty_params');
late final _rwkvmobile_runtime_get_penalty_params = _rwkvmobile_runtime_get_penalty_paramsPtr.asFunction<penalty_params Function(rwkvmobile_runtime_t , int )>();

penalty_params rwkvmobile_runtime_get_penalty_params_on_batch_slot(rwkvmobile_runtime_t runtime,
int model_id,
int slot,
) {
  return _rwkvmobile_runtime_get_penalty_params_on_batch_slot(runtime,
model_id,
slot,
);
}

late final _rwkvmobile_runtime_get_penalty_params_on_batch_slotPtr = _lookup<
    ffi.NativeFunction<penalty_params Function(rwkvmobile_runtime_t , ffi.Int , ffi.Int )>>('rwkvmobile_runtime_get_penalty_params_on_batch_slot');
late final _rwkvmobile_runtime_get_penalty_params_on_batch_slot = _rwkvmobile_runtime_get_penalty_params_on_batch_slotPtr.asFunction<penalty_params Function(rwkvmobile_runtime_t , int , int )>();

void rwkvmobile_runtime_set_penalty_params(rwkvmobile_runtime_t runtime,
int model_id,
penalty_params params,
) {
  return _rwkvmobile_runtime_set_penalty_params(runtime,
model_id,
params,
);
}

late final _rwkvmobile_runtime_set_penalty_paramsPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(rwkvmobile_runtime_t , ffi.Int , penalty_params )>>('rwkvmobile_runtime_set_penalty_params');
late final _rwkvmobile_runtime_set_penalty_params = _rwkvmobile_runtime_set_penalty_paramsPtr.asFunction<void Function(rwkvmobile_runtime_t , int , penalty_params )>();

void rwkvmobile_runtime_set_penalty_params_on_batch_slot(rwkvmobile_runtime_t runtime,
int model_id,
int slot,
penalty_params params,
) {
  return _rwkvmobile_runtime_set_penalty_params_on_batch_slot(runtime,
model_id,
slot,
params,
);
}

late final _rwkvmobile_runtime_set_penalty_params_on_batch_slotPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(rwkvmobile_runtime_t , ffi.Int , ffi.Int , penalty_params )>>('rwkvmobile_runtime_set_penalty_params_on_batch_slot');
late final _rwkvmobile_runtime_set_penalty_params_on_batch_slot = _rwkvmobile_runtime_set_penalty_params_on_batch_slotPtr.asFunction<void Function(rwkvmobile_runtime_t , int , int , penalty_params )>();

void rwkvmobile_runtime_add_adsp_library_path(ffi.Pointer<ffi.Char> path,
) {
  return _rwkvmobile_runtime_add_adsp_library_path(path,
);
}

late final _rwkvmobile_runtime_add_adsp_library_pathPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_add_adsp_library_path');
late final _rwkvmobile_runtime_add_adsp_library_path = _rwkvmobile_runtime_add_adsp_library_pathPtr.asFunction<void Function(ffi.Pointer<ffi.Char> )>();

void rwkvmobile_runtime_set_qnn_library_path(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> path,
) {
  return _rwkvmobile_runtime_set_qnn_library_path(runtime,
path,
);
}

late final _rwkvmobile_runtime_set_qnn_library_pathPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_set_qnn_library_path');
late final _rwkvmobile_runtime_set_qnn_library_path = _rwkvmobile_runtime_set_qnn_library_pathPtr.asFunction<void Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>();

double rwkvmobile_runtime_get_avg_decode_speed(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_avg_decode_speed(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_avg_decode_speedPtr = _lookup<
    ffi.NativeFunction<ffi.Double Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_avg_decode_speed');
late final _rwkvmobile_runtime_get_avg_decode_speed = _rwkvmobile_runtime_get_avg_decode_speedPtr.asFunction<double Function(rwkvmobile_runtime_t , int )>();

double rwkvmobile_runtime_get_avg_prefill_speed(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_avg_prefill_speed(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_avg_prefill_speedPtr = _lookup<
    ffi.NativeFunction<ffi.Double Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_avg_prefill_speed');
late final _rwkvmobile_runtime_get_avg_prefill_speed = _rwkvmobile_runtime_get_avg_prefill_speedPtr.asFunction<double Function(rwkvmobile_runtime_t , int )>();

evaluation_results rwkvmobile_runtime_run_evaluation(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> source_text,
ffi.Pointer<ffi.Char> target_text,
) {
  return _rwkvmobile_runtime_run_evaluation(runtime,
model_id,
source_text,
target_text,
);
}

late final _rwkvmobile_runtime_run_evaluationPtr = _lookup<
    ffi.NativeFunction<evaluation_results Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_run_evaluation');
late final _rwkvmobile_runtime_run_evaluation = _rwkvmobile_runtime_run_evaluationPtr.asFunction<evaluation_results Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>();

void rwkvmobile_runtime_free_evaluation_results(evaluation_results results,
) {
  return _rwkvmobile_runtime_free_evaluation_results(results,
);
}

late final _rwkvmobile_runtime_free_evaluation_resultsPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(evaluation_results )>>('rwkvmobile_runtime_free_evaluation_results');
late final _rwkvmobile_runtime_free_evaluation_results = _rwkvmobile_runtime_free_evaluation_resultsPtr.asFunction<void Function(evaluation_results )>();

int rwkvmobile_runtime_load_vision_encoder(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> encoder_path,
) {
  return _rwkvmobile_runtime_load_vision_encoder(runtime,
model_id,
encoder_path,
);
}

late final _rwkvmobile_runtime_load_vision_encoderPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_load_vision_encoder');
late final _rwkvmobile_runtime_load_vision_encoder = _rwkvmobile_runtime_load_vision_encoderPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_load_vision_encoder_and_adapter(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> encoder_path,
ffi.Pointer<ffi.Char> adapter_path,
) {
  return _rwkvmobile_runtime_load_vision_encoder_and_adapter(runtime,
model_id,
encoder_path,
adapter_path,
);
}

late final _rwkvmobile_runtime_load_vision_encoder_and_adapterPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_load_vision_encoder_and_adapter');
late final _rwkvmobile_runtime_load_vision_encoder_and_adapter = _rwkvmobile_runtime_load_vision_encoder_and_adapterPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_release_vision_encoder(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_release_vision_encoder(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_release_vision_encoderPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_release_vision_encoder');
late final _rwkvmobile_runtime_release_vision_encoder = _rwkvmobile_runtime_release_vision_encoderPtr.asFunction<int Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_runtime_set_image_unique_identifier(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> unique_identifier,
) {
  return _rwkvmobile_runtime_set_image_unique_identifier(runtime,
unique_identifier,
);
}

late final _rwkvmobile_runtime_set_image_unique_identifierPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_set_image_unique_identifier');
late final _rwkvmobile_runtime_set_image_unique_identifier = _rwkvmobile_runtime_set_image_unique_identifierPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_load_whisper_encoder(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> encoder_path,
) {
  return _rwkvmobile_runtime_load_whisper_encoder(runtime,
model_id,
encoder_path,
);
}

late final _rwkvmobile_runtime_load_whisper_encoderPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_load_whisper_encoder');
late final _rwkvmobile_runtime_load_whisper_encoder = _rwkvmobile_runtime_load_whisper_encoderPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();
